--- a/quark.tex
+++ b/quark.tex
@@ -216,6 +216,8 @@ Convergence in Replicated Data Types}      %% [Short Title] is optional;
 
 \input{introduction}
 
+\input{motivation}
+
 Text of paper \ldots
 
 
